@@ -3,6 +3,7 @@ DOMjudge Programming Contest Judging System
 Version 1.0.0 Release Candidate 2 - CVS
 ---------------------------------------
  - Add TOO-LATE result to team manual.
+ - Fix case-bug in sql/mysql_privileges.sql example.
 
 Version 1.0.0 Release Candidate 1 - 21 September 2005
 -----------------------------------------------------
